@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5947 2008/03/09 18:13:44 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5948 2008/03/09 18:44:26 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2008-03-09 22:20 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
+  * include/hbdate.h
+  * source/rtl/seconds.c
+    + added hb_dateMilliSeconds()
+  * source/rtl/idle.c
+  * source/rtl/inkey.c
+    * use hb_dateMilliSeconds() to avoid using clock_t clock()
+      some compilers/platforms do not support it
+  (by Przemyslaw Czerpak, borrowed from Harbour)
 
 2008-03-09 21:45 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
   * source/compiler/Makefile
